Implemented ProductsArrayList and ProductsInfo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileProjectCSI370">
         <activity
+            android:name=".inspectScrollActivity"
+            android:label="@string/title_activity_inspect_scroll"
+            android:theme="@style/Theme.MobileProjectCSI370.NoActionBar"></activity>
+        <activity android:name=".CategoriesActivity" />
+        <activity
             android:name=".OfficePCActivity"
             android:label="@string/title_activity_office_p_c"
-            android:theme="@style/Theme.MobileProjectCSI370.NoActionBar"></activity>
+            android:theme="@style/Theme.MobileProjectCSI370.NoActionBar" />
         <activity android:name=".PopUpWindow" />
         <activity android:name=".ResetPassActivity" />
         <activity android:name=".RegisterActivity" />
