--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileProjectCSI370">
+        <activity android:name=".MyCartActivity"></activity>
         <activity
             android:name=".InspectScrollPopUpActivity"
             android:label="@string/title_activity_inspect_scroll"
